<resources>
    <string name="app_name">Cairn</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Preferences</string>
    <string name="title_fav">Favourites</string>

    <string name="mapbox_access_token">pk.eyJ1Ijoicm9vdGxlciIsImEiOiJja3BmeHRxemwyYW9wMnlvZ21qbWh5czd4In0.MAKo5tu_jwBx3oKb_C4eAQ</string>

    <string name="user_location_permission_explanation">This app needs location permissions in order to show its functionality.</string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions. Tonsil</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LoginHeading">Login</string>
    <string name="LoginHintUsername">Email</string>
    <string name="LoginHintPassword">Password</string>
    <string name="RegisterHeading">Register</string>
    <string name="RegisterButton">Register -></string>
    <string name="RegisterSubHeading">Fill in details below</string>
    <string name="RegisterProfileHeading">Profile</string>
    <string name="RegisterMeasureHeading">Measurement System</string>
    <string name="RegisterHomeAddress">Home Address</string>
    <string name="RegisterEmail">Email Address</string>
    <string name="RegisterEmailHint">example@email.com</string>
    <string name="RegisterPassword">Password</string>
    <string name="RegisterPasswordConfirm">Confirm Password</string>
    <string name="SettingsMSImperial">Imperial</string>
    <string name="SettingsMSMetric">Metric</string>
    <string name="RegisterFavLandmark">Favourite Landmark</string>
    <string name="RegisterHomeAddressHint">23 Bob Street</string>
    <string name="login"><![CDATA[<- Login]]></string>

    <string-array name="arrLandmarkTypes">
        <item>Recreational</item>
        <item>Facilities</item>
        <item>Historical</item>
        <item>Food and Drink</item>
        <item>Art and Culture</item>
        <item>Entertainment</item>
    </string-array>


    <!--Account Details-->
    <string name="AccountDetailsHeading">Preferences</string>
    <string name="HintEmail">Email</string>
    <string name="HintHomeAddress">Home Address</string>
    <string name="ASettingsLogout">Log out</string>
    <string name="ASettingSave">Save</string>

    <string name="LandmarkTypeHistorical">Historical</string>
    <string name="LandmarkTypeModern">Modern</string>
    <string name="LandmarkTypePopular">Popular</string>


    <!--How To-->
    <string name="HowToHeading">How-to Guide</string>

    <string name="Question1">How do I change my profile settings?</string>
    <string name="Question2">How do I favourite a location?</string>
    <string name="Question3">How do I get step by step directions to my destination?</string>
    <string name="Question4">How do I report road closures?</string>

    <string name="Answer1">Select \"Preferences\" tab on the navigation bar. Click on the setting you want to change and edit the information. Ensure that you save the changes made by clicking the Save button.</string>
    <string name="Answer2">Click on the location on the map that you want to favourite or search for. Select the button with the pin icon in the bottom right hand corner of the screen. You will prompted to provide a name for the location to be added to your favourites.</string>
    <string name="Answer3">Once you have picked or searched for a location on the map, click the Navigate button. In the navigation screen that appears, click on the banner to see a list of step by step directions.</string>
    <string name="Answer4">On the navigation screen, click the text bubble icon. A list of options will pop up at the bottom of the screen. Select the option that you want to report.</string>



    <!--Register Activity-->
    <string name="RegisterFirstName">First Name</string>
    <string name="RegisterFirstNameHint">Bob</string>
    <string name="RegisterSurname">Surname</string>
    <string name="RegisterSurnameHint">McBob</string>

    <string name="PreferredUnits">Metric System</string>
    <string name="ActSaveIcon">Save Icon</string>
    <string name="ActUserIcon">User Icon</string>
    <string name="ActPinIcon">Pin Drop Icon</string>
    <string name="ActLogoutIcon">Log Out Icon</string>
    <string name="ActFavouriteLandmarkType">Favourite Landmark Type</string>
    <string name="navigate">Navigate</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="have_a_question">Have a question?</string>



    <string name="FavouriteLandmarksHeading">Favourite Landmarks</string>
    <string name="SetWaypointButton">Set Waypoint</string>
    <string name="DeleteLandmarkButton">Delete</string>

    <string name="LandmarkHeadingPlaceholder">Landmark Heading Placeholder</string>
    <string name="LandmarkLocationPlaceholder">Landmark Location Placeholder</string>
</resources>