<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/BackgroundDark"
    android:orientation="vertical"
    tools:context=".ui.start.actRegister">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/RegisterHeading"
        android:textSize="30sp"
        android:textColor="@color/OrangeDark"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/RegisterSubHeading"
        android:textSize="15sp"
        android:textColor="@color/OrangeDark"
        android:layout_gravity="center"/>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:progressTint="@color/OrangeLight"
        android:progress="100"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/RegisterProfileHeading"
                android:textSize="18sp"
                android:textColor="@color/OrangeDark"
                android:layout_gravity="start"
                android:paddingTop="20dp"
                android:paddingStart="20dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/CardviewBack"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="10dp"
                card_view:cardUseCompatPadding="true"
                card_view:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblRegisterEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="109dp"
                            android:text="@string/RegisterEmail"
                            android:textColor="#ffff"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/edtRegisterEmail"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:hint="@string/RegisterEmailHint"
                            android:inputType="textEmailAddress"
                            android:textColor="#ffff"
                            android:textColorHint="#8C8A8A"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblRegisterPass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="137dp"
                            android:text="@string/RegisterPassword"
                            android:textColor="#ffff"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/edtRegisterPassword"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:inputType="text"
                            android:textColor="#ffff"
                            android:textColorHint="#8C8A8A"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblRegisterCPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="83dp"
                            android:text="@string/RegisterPasswordConfirm"
                            android:textColor="#ffff"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/edtRegisterConPassword"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:inputType="text"
                            android:textColor="#ffff"
                            android:textColorHint="#8C8A8A"
                            android:textSize="14sp" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/RegisterMeasureHeading"
                android:textSize="18sp"
                android:textColor="@color/OrangeDark"
                android:layout_gravity="start"
                android:paddingStart="20dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/CardviewBack"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="10dp"
                card_view:cardUseCompatPadding="true"
                card_view:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/rdgMSystemReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:id="@+id/rdbtnImperialReg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/SettingsMSImperial"
                            android:textColor="#FFFFFF"
                            android:textColorLink="#FFFF" />

                        <RadioButton
                            android:id="@+id/rdbtnMetricReg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/SettingsMSMetric"
                            android:textColor="#FFFF" />
                    </RadioGroup>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/RegisterHomeAddress"
                android:textSize="18sp"
                android:textColor="@color/OrangeDark"
                android:layout_gravity="start"
                android:paddingStart="20dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="187dp"
                card_view:cardBackgroundColor="@color/CardviewBack"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="10dp"
                card_view:cardUseCompatPadding="true"
                card_view:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/lblRegisterHomeAddress"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="138dp"
                            android:text="@string/RegisterHomeAddress"
                            android:textColor="#ffff"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/edtRegisterHomeAddr"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:hint="@string/RegisterHomeAddressHint"
                            android:inputType="text"
                            android:textColor="#ffff"
                            android:textColorHint="#8C8A8A"
                            android:textSize="14sp" />

                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/RegisterFavLandmark"
                android:textSize="18sp"
                android:textColor="@color/OrangeDark"
                android:layout_gravity="start"
                android:paddingStart="20dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="180dp"
                card_view:cardElevation="10dp"
                card_view:cardUseCompatPadding="true"
                card_view:contentPadding="10dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardBackgroundColor="@color/CardviewBack">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/lblRegisterWeightGoal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="137dp"
                        android:text="@string/RegisterFavLandmark"
                        android:textColor="#ffff"
                        android:textSize="14sp" />

                    <Spinner
                        android:id="@+id/spedtFavLandmark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="118dp"
                android:layout_height="59dp"
                android:backgroundTint="@color/OrangeLight"
                android:id="@+id/btnGoToLogin"
                android:layout_gravity="center"
                android:layout_marginEnd="100dp"
                android:layout_marginStart="40dp"
                android:text="@string/login"
                android:gravity="center" />
            <Button
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="118dp"
                android:layout_height="59dp"
                android:backgroundTint="@color/OrangeLight"
                android:id="@+id/btnRegisterFull"
                android:layout_gravity="center"
                android:text="@string/RegisterHeading"
                android:gravity="center" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>