<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        card_view:cardElevation="10dp"
        card_view:cardUseCompatPadding="true"
        card_view:contentPadding="10dp"
        card_view:cardCornerRadius="8dp"
        card_view:cardBackgroundColor="@color/CardViewBackground">

        <TextView
            android:id="@+id/tv_landmarkHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/TextColour"
            android:textSize="22sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_landmarkLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LandmarkLocationPlaceholder"
            android:textColor="@color/TextColour"
            android:textSize="20sp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnViewLandmark"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:textSize="20sp"
            android:backgroundTint="@color/ButtonBackground"
            android:gravity="center"
            android:text="@string/SetWaypointButton" />
        <Button
            android:id="@+id/btnDeleteLandmark"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:textSize="20sp"
            android:backgroundTint="@color/ButtonBackground"
            android:gravity="center"
            android:text="@string/DeleteLandmarkButton" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider" />
</LinearLayout>